correción parámetros torneo-mesa, dataloader inicial más ampliado, implementación de panel admin y dashboard de estadísticas y ranking mensual, anual y total